@@ -1,3 +1,14 @@
+2015-03-04  Xavi Artigas  <xartigas@fluendo.com>
+
+	* src/gstttmlenums.h:
+	* src/gstttmlrender.c:
+	(gst_ttmlrender_pango_attr_reverse_oblique_new),
+	(gst_ttmlrender_build_layouts), (gst_ttmlrender_show_layout),
+	(gst_ttmlrender_init):
+	* src/gstttmlstyle.c: (gst_ttml_style_gen_pango_markup):
+	* src/gstttmlutils.c:
+	Add support for the reverseOblique fontStyle.
+
 2015-03-03  Xavi Artigas  <xartigas@fluendo.com>
 
 	* src/gstttmlattribute.c:
